# Research-Agent

./: DESIGN_DECISION.md  README.md  app.py  index.py  memory.db  memory.py  prompts.py  pyproject.toml  settings.py  tools.py  workflow.py  workflow_events.py
storage/: default__vector_store.json  docstore.json  index_store.json
